<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.antiwispr"
            android:targetClass="com.example.antiwispr.MainActivity">
            <extra android:name="tacit.dest" android:value="search" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="ask"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_ask"
        android:shortcutShortLabel="@string/shortcut_ask_short"
        android:shortcutLongLabel="@string/shortcut_ask_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.antiwispr"
            android:targetClass="com.example.antiwispr.MainActivity">
            <extra android:name="tacit.dest" android:value="ask" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="library"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_library"
        android:shortcutShortLabel="@string/shortcut_library_short"
        android:shortcutLongLabel="@string/shortcut_library_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.antiwispr"
            android:targetClass="com.example.antiwispr.MainActivity">
            <extra android:name="tacit.dest" android:value="library" />
        </intent>
    </shortcut>
</shortcuts>
